# sway

include/swaybar/: badges.h  badges_internal.h  bar.h  system_info.h
swaybar/: badges.c  badges_audio.c  badges_battery.c  badges_datetime.c  badges_dbus.c  badges_kbd_layout.c  badges_load.c  badges_network.c  badges_notifications.c  bar.c  meson.build  render.c  system_info.c
swaybar/dbus-1/interfaces/: net.easimer.swaybar.badges.Badge1.xml  net.easimer.swaybar.badges.BadgeGroup1.xml
